Fixes for SNAP-2377: (#123)
- To fix Trend charts layout issue, changing fixed width to width in percent for all trends charts on UI.

--- a/core/src/main/resources/org/apache/spark/ui/static/snappydata/snappy-dashboard.css
+++ b/core/src/main/resources/org/apache/spark/ui/static/snappydata/snappy-dashboard.css
@@ -192,7 +192,8 @@
 }
 
 .graph-container {
-  width: 400px;
+  min-width: 250px;
+  width: 20%;
   height: 200px;
   display: inline-block;
   margin: 10px;
